testcases/neg/sem/record_dup_field.tig
/* error: duplicate field in record */
let
    type rec = {a: int, a: string}
in
    0
end
